test/Interop/Cxx/namespace/inline-namespace-function-call-broken.code
// RUN: rm -rf %t
// RUN: split-file %s %t
// RUN: %target-language-frontend -typecheck -verify -verify-ignore-unknown -I %t/Inputs  %t/test.code  -enable-experimental-cxx-interop

//--- Inputs/module.modulemap
module namespaces {
  header "test.h"
  requires cplusplus
}
//--- Inputs/test.h
namespace Parent {
inline namespace InlineChild {

void functionInInlineChild();

} // namespace InlineChild
} // namespace Parent

//--- test.code

import namespaces;

// Codira's typechecker currently doesn't allow calling a function from inline namespace when it's referenced through the parent namespace.
fn test() {
  Parent.functionInInlineChild() // expected-error {{type of expression is ambiguous without a type annotation}}
}
